--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2896,14 +2896,22 @@ image:2110.png[]
 [[running-a-single-database-backup]]
 ===== Running a Single Database Backup
 
+{product-title} supports database backups to *Network File System (NFS)*, *Samba*, or *Amazon Web Service(AWS) S3*. 
+
+[NOTE]
+====
+Database backups to *AWS S3* require valid AWS credentials to perform this operation.
+====
+
 To run a single database backup:
 
 . From the settings menu, select *Configuration*.
 . Click the *Diagnostics* accordion and click the *Region* name.
 . Click the *Database* tab.
 . If you have created a backup schedule and want to use the same depot settings, select the schedule in the *Backup Schedules* box.
-. If you do not want to use the settings from a backup schedule, select a type of server for storing the backups from the Type drop-down list in the *Database Backup Settings* box. You can use *Network File System* (NFS) or *Samba*.
-* If you select *Samba*, enter the *URI*, *User ID*, and a valid *Password*. Click *Validate* to check the settings.
+. If you do not want to use the settings from a backup schedule, select a type of server for storing the backups from the Type drop-down list in the *Database Backup Settings* box. You can use *Network File System* (NFS), *Samba* or *AWS S3*.
+* If you select *Samba*, enter the *Depot Name*, *URI*, *Username*, and a valid *Password*. Click *Validate* to check the settings.
+* If you select *AWS S3*, enter the *Depot Name*, *URI*, and select the *AWS Region* from the drop-down list. Enter the *Username*, and a valid *Password*. Click *Validate* to check the settings.
 * If you select *Network File System*, enter the *URI*.
 . Click *Submit* to run the database backup.
 
@@ -3040,6 +3048,8 @@ Restore your PostgreSQL binary backup using the following steps. This process wi
 # systemctl start $APPLIANCE_PG_SERVICE
 # systemctl start evmserverd
 -----
+
+
 
 [[running-database-garbage-collection]]
 ==== Running Database Garbage Collection
