--- a/doc-REST_API/topics/chap-Examples.adoc
+++ b/doc-REST_API/topics/chap-Examples.adoc
@@ -54,6 +54,31 @@ include::unassign_tags.adoc[]
 
 include::unassign_tags_from_service_template.adoc[]
 
+include::assign_tags_cloud_networks.adoc[]
+
+include::unassign_tags_cloud_networks.adoc[]
+
+include::assign_tags_cloud_subnet.adoc[]
+
+include::unassign_tags_cloud_subnets.adoc[]
+
+include::assign_tags_availability_zone.adoc[]
+
+include::unassign_tags_availability_zones.adoc[]
+
+include::assign_tags_flavors.adoc[]
+
+include::unassign_tags_flavors.adoc[]
+
+include::assign_tags_network_routers.adoc[]
+
+include::unassign_tags_network_routers.adoc[]
+
+include::assign_tags_security_groups.adoc[]
+
+include::unassign_tags_security_group.adoc[]
+
+
 [[_sect_automation_requests]]
 === Automation Requests
 
