--- a/doc-REST_API/topics/Collection_Queries.adoc
+++ b/doc-REST_API/topics/Collection_Queries.adoc
@@ -26,6 +26,18 @@
 	
 
 | 
+
+						Cloud Networks
+|
+
+						/api/cloud_networks
+|
+
+						Cloud Subnets
+|
+						/api/cloud_subnets
+						
+|						
 	
 						Clusters
 	
@@ -82,6 +94,14 @@
 	
 
 | 
+
+						Network Routers
+						
+|
+
+						/api/network_routers
+						
+|							
 	
 						Policies
 	
