Added pre-migration playbook example

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
@@ -8,3 +8,6 @@ The planning phase of the migration has 2 key stages:
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
 include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
+include::modules/con_Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible.adoc[leveloffset=+1]
+[discrete]
+include::modules/proc_Creating_an_ansible_service_catalog_item.adoc[leveloffset=+2]
