--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_ansible_service_catalog_item.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_ansible_service_catalog_item.adoc
@@ -25,7 +25,7 @@ The following example registers the virtual machine against a Satellite 6 server
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 ---
-- hosts: _to_be_migrated_
+- hosts: _all_
   vars:
     rhsm_config:
       server_hostname: "_satellite.example.com_"
