--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -21,6 +21,8 @@ _vm03_, _vSphere3_
 
 * Unmount any ISO images that are mounted on source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
 
+* If you are automating pre- and post-migration tasks with Ansible, the Ansible service catalog item must be created first. See xref:Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible[].
+
 If you are migrating a small number of virtual machines, you can use the migration plan to discover the virtual machines. The migration plan displays a list, from which you manually select the virtual machines to migrate.
 
 [discrete]
@@ -53,7 +55,7 @@ image:Discover_VMs.png[]
 .Advanced Options
 image:Advanced_Options.png[]
 +
-You can select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible[] below.
+Select an Ansible playbook service catalog item if you are automating pre- or post-migration tasks.
 
 . Select *Start Migration Immediately* and click *Create*.
 
