--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible.adoc
@@ -1,4 +1,6 @@
 [id="Advanced_migration_option-_automating_pre-_and_post-migration_tasks_with_ansible"]
 = Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible
 
-Certain tasks may need to be performed before or after a virtual machine is migrated, for example, removing web server virtual machines from a load-balancing pool before migration and adding them back to the pool after migration. When creating a migration plan, you can specify an Ansible service catalog item to run before or after the migration of each virtual machine within the plan.
+You can automate certain tasks before or after a virtual machine is migrated, for example, removing web server virtual machines from a load-balancing pool before migration and adding them back to the pool after migration. You create an Ansible service catalog item that contains the playbook and select it while creating the infrastructure migration plan.
+
+Red Hat recommends using the xref:Ims_rhel_pre-migration_ansible_playbook_example[IMS RHEL Pre-migration Ansible Playbook Example] to configure the target Red Hat Enterprise Linux virtual machines.
