--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Rhv_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Rhv_conversion_hosts.adoc
@@ -3,7 +3,7 @@
 
 All the virtual machines that are specified in a migration plan are migrated at the same time. Therefore, the number of RHV conversion hosts that you create depends on the number of virtual machines you intend to migrate. Red Hat recommends configuring the RHV conversion hosts on physical machines, not nested virtual machines.
 
-Each conversion host is limited to `10` concurrent migrations, unless you change the default value (see xref:Configuring_the_maximum_number_of_concurrent_migrations[] below).
+Each conversion host is limited to `10` concurrent migrations, unless you  xref:Configuring_the_maximum_number_of_concurrent_migrations[change the default value].
 
 [IMPORTANT]
 ====
