--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/index.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/index.adoc
@@ -1,4 +1,4 @@
-= Installing ManageIQ on Red Hat Enterprise Linux OpenStack Platform
+= Installing ManageIQ on Red Hat OpenStack Platform
 :imagesdir: images
 :vernum: 0
 :toc: left
