--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
@@ -81,7 +81,7 @@ image:4941.png[title="Add Rule Dialog"]
 A flavor is a resource allocation profile that specifies, for example, how many virtual CPUs and how much RAM can be allocated to an instance. You can, for example, run {product-title} on a Red Hat OpenStack m1.large flavor, which specifies a virtual machine with 4
 cores, 8GB RAM, and 80GB disk space. Creating a flavor to run {product-title} is optional.
 
-The following procedure demonstrates creating a flavor with the minimum requirements (4 cores, 8GB RAM, 44GB disk space) for {product-title}. For more information about flavors, see the Red Hat Enterprise Linux OpenStack Platform Administration User Guide.
+The following procedure demonstrates creating a flavor with the minimum requirements (4 cores, 8GB RAM, 44GB disk space) for {product-title}. For more information about flavors, see the Red Hat OpenStack Platform Administration User Guide.
 
 . Log in to the OpenStack dashboard as admin.
 . In the *Admin* tab, navigate to menu:System[Flavors].
@@ -122,7 +122,7 @@ A new flavor specific to {product-title} is created.
 [[adding-a-floating-ip-address]]
 === Adding a Floating IP Address
 
-When you create an instance, Red Hat Enterprise Linux OpenStack Platform automatically assigns it a fixed IP address in the network to which the instance belongs. This IP address is permanently associated with the instance until the instance is terminated.
+When you create an instance, Red Hat OpenStack Platform automatically assigns it a fixed IP address in the network to which the instance belongs. This IP address is permanently associated with the instance until the instance is terminated.
 
 In addition to the fixed address, you can also assign a floating IP address to an instance. Unlike fixed IP addresses, you can modify floating IP addresses associations at any time, regardless of the state of the instances involved.
 
