--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VM_ISO.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VM_ISO.adoc
@@ -1,13 +1,24 @@
 [[Reconfiguring_VM_ISO]]
-= Attach or Remove an ISO on a VMware Virtual Machine
+= Attach or Remove an ISO (VMware Virtual Machines Only)
 
-You can attach or remove an ISO on VMware virtual machine using following steps:
+You can attach an ISO to a VMware virtual machine using following steps:
 
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the target virtual machine.
 . Click  image:1847.png[] (*Configuration*), and then  image:1851.png[] (*Reconfigure this VM*).
-. Under *CD/DVD Drives*, select the *Host File*.
-. Specify the desired memory size and units (MB or GB).
+. Under *CD/DVD Drives*, click *Connect*.
+. Select the *Host File* from the list to attach and click *Confirm Connect*.
 . Click *Submit*.
 
-The ISO is now attached the CD/DVD Drive of the VMware virtual machine.
+The ISO is now attached to the VMware virtual machine.
+
+You can remove an ISO on VMware virtual machine using following steps:
+
+. Navigate to menu:Compute[Infrastructure > Virtual Machines].
+. Select the target virtual machine.
+. Click  image:1847.png[] (*Configuration*), and then  image:1851.png[] (*Reconfigure this VM*).
+. Under *CD/DVD Drives*, locate the *Host File* and click *Disconnect*.
+. Click *Confirm*.
+. Click *Submit*.
+
+The ISO is removed from the VMware virtual machine.
