Moved link location

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Ims_rhel_pre-migration_ansible_playbook_example.adoc
@@ -3,10 +3,10 @@
 
 The `ims.rhel_pre_migration` role configures a target Red Hat Enterprise Linux virtual machine for migration by performing the following tasks:
 
-* Persisting network interface names with `udev` rules
+* Preserving the static IP address configuration
 * Installing the RHV guest agent
 
-This example registers a virtual machine with a Satellite 6 server and enables the `rhel-7-server-rpms` repository. If no  link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[variables] are provided, the playbook assumes that the repositories are already configured and installs the RHV guest agent.
+This example registers a virtual machine with a Satellite 6 server and enables the `rhel-7-server-rpms` repository. If no variables are provided, the link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[playbook] assumes that the repositories are already configured and installs the RHV guest agent while maintaining the static IP address.
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
