--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -23,7 +23,8 @@ If you are migrating a small number of virtual machines, you can use the migrati
 
 * Unmount any ISO images that are mounted on source virtual machines. A virtual machine with an attached ISO image will cause the migration to fail.
 
-* Check that the source virtual machine disks are unencrypted. Migrating encrypted disks is not supported in the current IMS version (1.0).
+* Check that the source virtual machine disks are unencrypted. The current IMS version does not support migration of encrypted disks.
+// IMS 1.0
 
 [discrete]
 == Procedure
