--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_ansible_service_catalog_item.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_ansible_service_catalog_item.adoc
@@ -1,10 +1,10 @@
 [id="Creating_an_ansible_service_catalog_item"]
 = Creating an Ansible Service Catalog Item
 
-The CloudForms Inventory must contain at least one Ansible repository, one playbook, and one credential.
+The CloudForms inventory must contain at least one Ansible repository, one playbook, and one credential.
 
 .Procedure
 
-. In CloudForms, configure the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/managing_providers/automation_management_providers#ansible-inside[Ansible repository and credentials].
+. Configure the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/managing_providers/automation_management_providers#ansible-inside[Ansible repository and credentials].
 . Create a link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/provisioning_virtual_machines_and_hosts/#creating-a-catalog-bundle[catalog bundle].
 . Create an link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/provisioning_virtual_machines_and_hosts/#create-playbook-service-catalog-item[Ansible playbook service catalog item].
