--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -32,7 +32,7 @@ The following ports must be enabled:
 For more information, see link:https://access.redhat.com/articles/417343[Ports used by Red Hat CloudForms Management Engine 5.1 and above].
 
 Data and ISO storage domains attached to the RHV data center::
-See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#chap-Storage[Storage] in the _Red Hat Virtualization Administration Guide_. Currently, IMS only supports shared storage, such as NFS, iSCSI, or FCP, not local storage.
+See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#chap-Storage[Storage] in the _Red Hat Virtualization Administration Guide_. IMS only supports shared storage, such as NFS, iSCSI, or FCP, not local storage.
 
 VirtIO and Guest Tool images uploaded to the ISO storage domain::
 See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[Uploading the VirtIO and Guest Tool Image Files to an ISO Storage Domain] in the _Red Hat Virtualization Administration Guide_.
