Add conversion host credentials before creating infra mapping

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,10 +1,16 @@
 [[Creating_an_Infrastructure_Mapping]]
 = Creating an Infrastructure Mapping
 
+The infrastructure mapping maps your VMware resources to RHV resources.
+
 .Migration Screen
 image:Compute_Manage_UI.png[]
 
-In CloudForms, create an infrastructure mapping to map your VMware resources to RHV resources:
+.Prerequisite
+
+Before creating an infrastructure mapping, you must create the conversion host credentials. Otherwise, the network will not be added to the mapping.
+
+.Procedure
 
 . Go to menu:Compute[Migration] and click *Create Infrastructure Mapping*.
 . Enter the name of your mapping and click *Next*.
