--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -1,8 +1,7 @@
 [[Creating_a_Migration_Plan]]
 = Creating and Running a Migration Plan
 
-[discrete]
-== Prerequisites
+.Prerequisites
 
 * If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, create a CSV file [[CSV_file]]containing a list of source virtual machines to migrate.
 +
@@ -23,8 +22,7 @@ _vm03_, _vSphere3_
 
 If you are migrating a small number of virtual machines, you can use the migration plan to discover the virtual machines. The migration plan displays a list, from which you manually select the virtual machines to migrate.
 
-[discrete]
-== Procedure
+.Procedure
 
 . Go to menu:Compute[Migration] and click *Create Migration Plan*.
 
