--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -139,6 +139,12 @@ For more information on Ansible playbooks, see the link:https://docs.ansible.com
 
 To access your Ansible Tower inventory from {product-title}, you must add Ansible Tower as a provider. 
 
+[NOTE]
+====
+* Ensure *ENABLE HTTP BASIC AUTH* is set to *On* in the Ansible Tower configuration settings before adding the provider. See https://docs.ansible.com/ansible-tower/latest/html/administration/configure_tower_in_tower.html[Tower Configuration] in the Ansible Tower _Administration Guide_.
+* A trailing slash is required at the end of the Ansible Tower provider URL. Adding the trailing slash to the provider URL assures successful provider refreshes. 
+====
+
 . Navigate to menu:Automation[Ansible Tower > Explorer] and click on the *Providers* accordion tab.
 . Under image:1847.png[Configuration] *Configuration*, click  image:1862.png[Add a new Provider] *Add a new Provider*.
 
@@ -148,11 +154,12 @@ image:Add_Ansible_Provider.png[Add_Ansible_Provider]
 +
 .. Enter a *Name* for the new provider.
 .. Add a *Zone* for the provider.
-.. Enter the *URL* location or IP address to the Ansible Tower server.
+.. Enter the *URL* location or IP address to the Ansible Tower server. Add a trailing slash to the end of the Ansible Tower provider URL. 
 . Select the *Verify Peer Certificate* checkbox if desired.
 . In the *Credentials* area, provide the *Username* and *Password*, and *Confirm Password*.
 . Click *Validate* to verify credentials.
 . Click *Add*.
+
 
 After adding the Ansible Tower provider, refresh its relationships and power states in order to view the current inventory.
 
