--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -17,6 +17,7 @@ See  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4
 
 Network::
 The VMware network must be extended to the RHV environment.
++
 [IMPORTANT]
 ====
 The network configuration must not be changed in any way during the migration. IP addresses, VLANs, and other network configurations must be the same, before and after migration, because the conversion process preserves the source virtual machine MAC addresses.
@@ -32,7 +33,12 @@ The following ports must be enabled:
 For more information, see link:https://access.redhat.com/articles/417343[Ports used by Red Hat CloudForms Management Engine 5.1 and above].
 
 Data and ISO storage domains attached to the RHV data center::
-See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#chap-Storage[Storage] in the _Red Hat Virtualization Administration Guide_. IMS only supports shared storage, such as NFS, iSCSI, or FCP, not local storage.
+See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#chap-Storage[Storage] in the _Red Hat Virtualization Administration Guide_.
++
+[NOTE]
+====
+IMS only supports shared storage, such as NFS, iSCSI, or FCP, not local storage.
+====
 
 VirtIO and Guest Tool images uploaded to the ISO storage domain::
 See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_the_VirtIO_and_Guest_Tool_Image_Files_to_an_ISO_Storage_Domain[Uploading the VirtIO and Guest Tool Image Files to an ISO Storage Domain] in the _Red Hat Virtualization Administration Guide_.
