Sentence broken into two.

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -37,7 +37,7 @@ See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.
 +
 [NOTE]
 ====
-IMS only supports shared storage, such as NFS, iSCSI, or FCP, not local storage.
+IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is not supported.
 ====
 
 VirtIO and Guest Tool images uploaded to the ISO storage domain::
