Moved missing networks note to Troubleshooting

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -46,8 +46,8 @@ image:Migrated_VM_details.png[]
 Incorrect infrastructure mapping::
 If you create an infrastructure mapping and subsequently add or remove providers or provider objects, the infrastructure mapping will not work because the object IDs of the providers and their objects have changed. You must delete the infrastructure mapping and re-create it.
 
-RHV host credentials not set in CloudForms::
-If the RHV host credentials are not set, CloudForms cannot communicate with the hosts. To authenticate the RHV hosts with CloudForms, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[Authenticating Red Hat Virtualization Hosts] in _CloudForms: Managing Providers_.
+Infrastructure mapping missing networks::
+If the infrastructure mapping does not show the networks, check the credentials for the conversion hosts. See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[Authenticating Red Hat Virtualization Hosts] in _CloudForms: Managing Providers_.
 
 Incorrect attributes in the virtual machine CSV import file::
 Create a new migration plan, import the correct CSV file, and run the migration plan.
