--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2912,8 +2912,10 @@ To run a single database backup:
 . If you do not want to use the settings from a backup schedule, select a type of server for storing the backups from the Type drop-down list in the *Database Backup Settings* box. You can use *Network File System* (NFS), *Samba* or *AWS S3*.
 * If you select *Samba*, enter the *Depot Name*, *URI*, *Username*, and a valid *Password*. Click *Validate* to check the settings.
 * If you select *AWS S3*, enter the *Depot Name*, *URI*, and select the *AWS Region* from the drop-down list. Enter the *Username*, and a valid *Password*. Click *Validate* to check the settings.
+* If you select *OpenStack Swift*, enter the *Depot Name*, *URI*, *Security Protocol* and *API Port*. Enter the *Username*, and a valid *Password*. Click *Validate* to check the settings.
 * If you select *Network File System*, enter the *URI*.
 . Click *Submit* to run the database backup.
+
 
 [[restoring-a-database-from-a-backup]]
 ===== Restoring a Database from a Backup
