--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2896,7 +2896,7 @@ image:2110.png[]
 [[running-a-single-database-backup]]
 ===== Running a Single Database Backup
 
-{product-title} supports database backups to *Network File System (NFS)*, *Samba*, or *Amazon Web Service(AWS) S3*. 
+{product-title} supports database backups to *Network File System (NFS)*, *Samba*, *Amazon Web Service(AWS) S3* and *OpenStack Swift* storage. 
 
 [NOTE]
 ====
