--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1959,7 +1959,7 @@ The host is shown because it may have connected virtual machines in the future w
 * *Datastore Analysis*: Displays *Datastore Selection* where you can choose to analyze *All Datastores*, *All Datastores for Host*, *All Datastores for Provider*, *A single Datastore*, or *Global Filters*.
 * *VM Compliance Check*: Displays *VM Selection* where you can choose to analyze *All VMs*, *All VMs for Provider*, *All VMs for Cluster*, *All VMs for Host*, *A single VM*, or *Global Filters*.
 * *Host Compliance Check*: Displays *Host Selection* where you can choose to analyze *All Hosts*, *All Hosts for Provider*, *All Hosts for Cluster*, *A single Host*, or *Global Filters*.
-* *Database Backup*: Under *Type*, displays *Network File System* and *Samba*. See xref:database_backup[] for details on scheduling a database backup.
+* *Database Backup*: Under *Type*, displays *Network File System*, *Samba*, *Amazon AWS S3* and *OpenStack Swift*.. See xref:database_backup[] for details on scheduling a database backup.
 . By applying *Global Filters* within any of the above items, you can designate which virtual machines or hosts to analyze.
 . In *Run*, set the frequency of the analysis to run. There are further options based on which *Run* option you choose.
 * Click *Once* to have the analysis run only one time.
