--- a/art-Creating_a_Service_for_VM_Provisioning/cfme/master.adoc
+++ b/art-Creating_a_Service_for_VM_Provisioning/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Creating a Service in CloudForms for Virtual Machine Provisioning
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.7-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -23,3 +23,4 @@ include::topics/Creating_a_Service_Dialog.adoc[]
 include::topics/Creating_a_Catalog_Item.adoc[]
 
 include::topics/Provisioning_a_VM_Using_SSUI.adoc[]
+
