--- a/art-Service_Provisioning_Using_an_Orchestration_Template/cfme/master.adoc
+++ b/art-Service_Provisioning_Using_an_Orchestration_Template/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Service Provisioning in CloudForms Using an Orchestration Template
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.7-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -27,3 +27,4 @@ include::topics/Creating_a_Catalog.adoc[]
 include::topics/Ordering_Service.adoc[]
 
 include::topics/Orchestration_Stack.adoc[]
+
