--- a/common/attributes/cfme.adoc
+++ b/common/attributes/cfme.adoc
@@ -5,14 +5,16 @@
 :product-title_abbr: cfme
 :product-title_abbr_uc: CFME
 :virt-product-title: Red Hat Virtualization
-:product-repo_list: cf-me-5.10-for-rhel-7-rpms rhel-7-server-ansible-2.6-rpms rhel-7-server-extras-rpms rhel-7-server-optional-rpms rhel-7-server-rpms
+:product-repo_list: cf-me-5.10-for-rhel-7-rpms rhel-7-server-ansible-2.7-rpms rhel-7-server-extras-rpms rhel-7-server-optional-rpms rhel-7-server-rpms rhel-server-rhscl-7-rpms
 :product-repo_list_lb: cf-me-5.10-for-rhel-7-rpms + \
-rhel-7-server-ansible-2.6-rpms + \
+rhel-7-server-ansible-2.7-rpms + \
 rhel-7-server-extras-rpms + \
 rhel-7-server-optional-rpms + \
-rhel-7-server-rpms
+rhel-7-server-rpms + \
+rhel-server-rhscl-7-rpms
 :product-repo_cfme: cf-me-5.10-for-rhel-7-rpms
-:product-repo_ansible: rhel-7-server-ansible-2.6-rpms
+:product-repo_ansible: rhel-7-server-ansible-2.7-rpms
 :product-repo_extras: rhel-7-server-extras-rpms
 :product-repo_optional: rhel-7-server-optional-rpms
 :product-repo_server: rhel-7-server-rpms
+:product-repo_rhscl: rhel-server-rhscl-7-rpms
