--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -6,13 +6,12 @@ The infrastructure mapping maps your VMware resources to RHV resources.
 .Migration Screen
 image:Compute_Manage_UI.png[]
 
-.Prerequisite
+[NOTE]
+====
+Before creating an infrastructure mapping, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate the RHV conversion hosts]. Otherwise, the network will be missing in the  infrastructure mapping.
+====
 
-Before creating an infrastructure mapping, you must create the conversion host credentials. Otherwise, the network will not be added to the mapping.
-
-.Procedure
-
-. Go to menu:Compute[Migration] and click *Create Infrastructure Mapping*.
+. Click menu:Compute[Migration] and click *Create Infrastructure Mapping*.
 . Enter the name of your mapping and click *Next*.
 . Select a source cluster and a target cluster.
 . Click *Add Mapping* and *Next*.
@@ -30,7 +29,7 @@ Before creating an infrastructure mapping, you must create the conversion host c
 .. Click *Add Mapping*.
 
 . Click *Create*.
-. If a successful mapping message is displayed, click *Close*.
+. If a successful mapping message is displayed, click *Close*. If the infrastructure mapping displays error messages, see xref:Common_issues_and_mistakes[Common Issues and Mistakes].
 +
 Your infrastructure mapping is displayed in menu:Compute[Migration].
 +
