--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_in_cloudforms.adoc
@@ -3,7 +3,7 @@
 
 Configure the RHV conversion hosts in CloudForms:
 
-. Go to menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
+. Click menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
 . Click the `Policy` drop-down button and select `Edit Tags`.
 . Select `V2V - Transformation Host` from the tag drop-down list and `t` as the assigned value.
 . Select `V2V - Transformation Method` from the tag drop-down list and either `VDDK` or `SSH` as the assigned value. See xref:datapath_transformation_options_vddk_ssh[Datapath Transformation Options: VDDK vs. SSH] for more information.
