--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -24,7 +24,7 @@ If you are migrating a small number of virtual machines, you can use the migrati
 
 .Procedure
 
-. Go to menu:Compute[Migration] and click *Create Migration Plan*.
+. Click menu:Compute[Migration] and click *Create Migration Plan*.
 
 . Select the infrastructure mapping from the drop-down list.
 
@@ -57,7 +57,7 @@ You can select Ansible playbook services to run on the virtual machines in the m
 
 . Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time are displayed. To view the migration progress of individual virtual machines, click the migration plan to go to the migration plan details.
 +
-When the migration is complete, the migration plan is displayed under *Completed Migrations*, with the number of successfully migrated virtual machines. A *Retry* option enables you to re-migrate any virtual machines in this plan that failed to migrate. See xref:Retrying_a_Migration_Plan[Retrying a Migration Plan].
+When the migration is complete, the migration plan is displayed under *Completed Migrations*, with the number of successfully migrated virtual machines. A *Retry* option enables you to re-migrate any virtual machines in this plan that failed to migrate. See xref:Retrying_a_Migration_Plan[Retrying a Migration Plan]. For other errors, see xref:Common_issues_and_mistakes[Common Issues and Mistakes].
 
 [NOTE]
 ====
