--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -41,10 +41,12 @@ image:Migrated_VM_details.png[]
 == Common Issues and Mistakes
 
 Infrastructure mapping is missing datastores or clusters::
-If you create an infrastructure mapping and subsequently add or remove providers or provider objects, the infrastructure mapping will display error messages (for example, *Datastores missing* or *Clusters missing*) because the object IDs of the providers and their objects have changed. You must delete the infrastructure mapping and re-create it.
+If you create an infrastructure mapping and subsequently add or remove providers or provider objects, the infrastructure mapping displays *Datastores missing* or *Clusters missing* error messages because the object IDs of the providers and their objects have changed. You must delete the infrastructure mapping and re-create it.
 
 Infrastructure mapping is missing networks::
-If the infrastructure mapping displays a *Missing Networks* error message, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate the RHV conversion hosts] and create a new infrastructure mapping.
+If the infrastructure mapping displays a *Networks missing* error message, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_providers/#authenticating_rhv_hosts[authenticate the RHV conversion hosts] and create a new infrastructure mapping.
++
+image:Mapping_missing_network.png[]
 
 Incorrect attributes in the virtual machine CSV import file::
 Create a new migration plan, import the correct CSV file, and run the migration plan.
