VM name limitations

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -54,3 +54,5 @@ See  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/h
 RHV conversion hosts created and configured::
 See xref:rhv_conversion_hosts[].
 
+Virtual machine names::
+The virtual machine names may contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). Special characters and spaces are not permitted.
