add container scan api

--- a/doc-REST_API/topics/Collection_Queries.adoc
+++ b/doc-REST_API/topics/Collection_Queries.adoc
@@ -52,7 +52,11 @@
 | 	
 						/api/conditions
 	
-
+|	
+						Container Images
+|
+            /api/container_images/
+												
 | 
 	
 						Datastores
