--- a/doc-REST_API/topics/chap-Examples.adoc
+++ b/doc-REST_API/topics/chap-Examples.adoc
@@ -167,12 +167,22 @@ include::edit_service_templates.adoc[]
 
 include::delete_service_templates.adoc[]
 
+
+[[_sect_containers]]
+=== Containers
+
+This section provides examples of how to interact with containers.
+
+include::scan_containers.adoc[]
+
+
 [[_sect_datastores]]
 === Datastores
 
 This section provides examples of how to interact with datastores.
 
 include::delete_datastore.adoc[]
+
 
 
 
